v5.1
@todo
- cleanup database
- updater
    - delete columns
    - delete all objects from cache / db (object / version syntax changed)
v4.2
- IMS Common Cartridge packages rendering
- Plugin for "Deutsche Digitale Bibliothek"
- Plugin for "NetMath"
- Plugin for "Serlo"
- edu-sharing folder rendering
- edu-sharing series rendering
- add DSGVO conformity
- redesign inline (LMS) rendering

v4.1
- H5P rendering
- LTI rendering
- replace mcrypt/blowfish with openssl based encryption
- fix conversion status bar
- update title/filename from repository
- secure installer
- remove scroll to top button in single view
- add parameter to force preview
- check content license

v4.0
- completely new unified metadata rendering for all display modes
- use png as standard format in picture module
- performance improvements
- layout/css bugfixes
- remove java applet module
- add learningapps module

v3.1/3.2
- add PHP7 support
- revised license rendering
- revised updater
- add inline metadata rendering
- additional mimetypes (video)
- update ffmpeg
- introduce view with comprehensive metadata rendering
- remove WURFL, get video capability direct from client
- support rendering for edu-sharing mobile app
- optimizations for mobile devices
- opportunity to use a separate cache for "safe" objects
- render html snippets

v3.0
- support PostgreSQL
- image module now uses PHP gd instead of imagemagick
- changeover to prepared statements (PHP PDO)
- working-over licence rendering
- new admin interface for DB supports MySQL, PostgreSQL and others
- communication between repository - rendering service - lms simplified
- edu-sharing webservices replace Alfresco web services
- picture rendering add fit to screen and original image size option
- remove unnecessary database items
- improve video quality for webm videos
- added video support for MS Edge
- French language support
- centralise module caches (facilitates clustering)
- new module etherpad (LTI based)